# LabelGenerator

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/assets/: contents.csv  template.py
src/LabelGenerator/: __init__.py  barcode.py  document.py  fonts.py  logger.py  page.py  qrcode.py  text.py
tests/: __init__.py  conftest.py  test_barcode.py  test_document.py  test_page.py  test_qrcode.py  test_text.py
